--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,4 +5,11 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
 
+    <!-- Button text -->
+    <string name="home">Home</string>
+    <string name="calender">Calender</string>
+    <string name="fun">Fun</string>
+    <string name="title_activity_calender">CalenderActivity</string>
+    <string name="title_activity_fun">FunActivity</string>
+
 </resources>
