--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,21 @@
     <string name="app_name">PF SOSU</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="title_activity_calender">CalenderActivity</string>
+    <string name="title_activity_fun">FunActivity</string>
+    
+    
+    <!-- Button text -->
+    <string name="home">Home</string>
+    <string name="calender">Calender</string>
+    <string name="fun">Fun</string>
+    <string name="go">Go</string>
+    
+    <!-- Reklame - næste arrangement -->
+    <string name="next_event">Næste arrangement</string>
+    <string name="next_event_title">Vin smagning</string>
+    <string name="next_event_date">3. juni kl. 15:00</string>
+    <string name="next_event_7_tilmeldte">7 tilmeldte</string>
+    <string name="next_event_tilmeld">Tilmeld dig nu</string>
 
 </resources>
