--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,6 +14,8 @@
     <string name="go">Go</string>
     <string name="show_comment">Vis kommentar</string>
     <string name="write_comment">Skriv kommentar</string>
+    <string name="signup">Tilmeld</string>
+    <string name="signup_maybe">Måske</string>
 
     <!-- Reklame - næste arrangement -->
     <string name="next_event">Næste arrangement</string>
